# robodex

./: .gitignore  apikey.py  config.py  decide_action_TATsys.py  decide_action_rulebase.py  exe_robo_action.py  get_robo_actdata_comment.py  get_robo_actdata_led.py  get_robo_actdata_motion.py  get_weather.py  libboost_python3.so.1.65.1  main.py  mainRobodex.py  main_robodex.py  multi_exe_ctrl.py  prev_info.py  recog_okao.py  recog_utterance.py  recog_utterance_gcspeechapi.py  robo_action_rulebase.py  robo_human_data.py  robo_motion_data.py  robotHumanData.py  tbl_human_comment.py  tbl_robo_action.py  tbl_robo_comment.py  tbl_robo_led.csv  tbl_robo_led.py  tbl_robo_motion.csv  tbl_robo_motion.py  tbl_tat_comment.py  test_aplay.py  test_device.py  test_google_cloud_speech_api.py  test_okao.py  test_request.json  test_speak.py  test_voicetext.py  tst_dev.py  tst_dev_koma.py  (+1 more)
memofiles4github/: 2use_atom_via_ssh  debug_history.txt  exe_command.txt  ipaddress.txt  naming_order.txt  okao_memo.txt  use_robot_action_files.txt  weather_memo.txt
okao_files/okao_source/test-hvcp2-v1/: .uart.c.swm  .uart.c.swo  (+8 more)
okao_files/okao_source/test-hvcp2-v1_backup201801032128/: .uart.c.swn  CMakeCache.txt  CMakeLists.txt  Main  Makefile  cmake_install.cmake  main.cpp
okao_files/okao_source/test-hvcp2-v1_backup201801032128/bak/: main-class.cpp
script_files/: tat_sys_test.txt  tat_sys_test2  test_kuma  typescript_jbc_rulebase  typescript_jbc_rulebase2_okaoprint  typescript_jbc_rulebase3_cancelmultiokao  typescript_jbc_rulebase4_print_getOkaoVisionData  typescript_jbc_rulebase5_recog_okao
(+2 files in other folders)
